@@ -1,1 +1,1 @@
-#define KVT_VERSION "kvt-0.17.1"
+#define KVT_VERSION "kvt-0.17.2"
